# cbor-plusplus

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README  README.md  TODO.md
include/cbor++/: CBORDecoder.h  CBORPlusPlusDecoder.h  CBORValue.h  cbor++.h  version.h
lib/: libprojectname.1.0.dylib
src/: CBORDecoder.cpp  CBORPlusPlusDecoder.cpp  CBORValue.cpp  CMakeLists.txt  libraryinfo.h  libraryinfo.h.in.cmake  util.cpp  util.h  version.cpp
test/: CBORDecoderTest.cpp  CBORIntegerDecoderTest.cpp  CBORPlusPlusDecoderTest.cpp  CMakeLists.txt  main.cpp  sanity_check.cpp  test.h
